syntax="proto3";

option go_package = "github.com/rumsrami/givly-rpc-api/pkg/rpc/transaction";

package transaction;

import "google/protobuf/timestamp.proto";

// Represents an available item for sale
message SaleItem {
  // Created on item creation
  string itemUuid = 1;
  // Name
  string itemName = 2;
  // Thumbnail URL
  string itemThumb = 3;
}

// Represents a list of items for sale
message ItemList {
  repeated SaleItem saleItems = 1;
}

// Represents a product in Transaction Products
message Product {
  // Created on creation of Transaction
  string productUuid = 1;
  // Created on creation of Transaction
  string productName = 2;
  // Obtained from frontend on submitting a transaction
  float price = 3;
}

// Represents one Transaction
message Transaction {
  // Created on Transaction Submission 
  string transactionUuid = 1;
  // Obtained from frontend maps to a cryptoID in DB
  string merchantUuid = 2;
  // Obtained from frontend - created by crypto endpoint
  string recipientCryptoId = 3;
  // List of products in transaction
  repeated Product products = 4;
  // Time of transaction creating
  google.protobuf.Timestamp createdAt = 5;
}

// Gets a list of available items for sale
// Returns an ItemList
message ItemListReq {}

// Submits a transaction
// Returns a transaction with ID
message SubmitTxReq {
  Transaction transaction = 1;
}

// Gets Transactions by Recipient CryptoId
// Returns a list of Transactions
message TxByRecipientReq {
  string recipientCryptoId = 1;
}

// Gets Transactions by Merchant Uuid
// Returns a list of Transactions
message TxByMerchantReq {
  string merchantUuid = 1;
}

// Gets List of transactions
// Response to TxByMerchantReq and TxByRecipientReq
message TxRes {
  repeated Transaction transactionList = 1;
}

service TransactionService {
  rpc GetItemList(ItemListReq) returns (ItemList){}
  rpc CreateItems(ItemList) returns (ItemList){}
  rpc SubmitTx(SubmitTxReq) returns (Transaction){}
  rpc GetRecipientTx(TxByRecipientReq) returns (TxRes){}
  rpc GetMerchantTx(TxByMerchantReq) returns (TxRes){}
}